# Fahrgemeinschaften

./: .dockerignore  .gitignore  .replit  Carsharing.md  DOCKERFILE  Dockerfile  Netflix Algorithmus zur Filmzuordnung.md  README.md  docker-compose.yml  dockerfile  germany_addresses.csv  main.py  package-lock.json  package.json  pyproject.toml  replit.md  setup.sh  tailwind.config.js  test_data.py
.obsidian/: app.json  workspace-mobile.json
Excalidraw/: Drawing 2026-02-09 14.22.40.excalidraw.md
components/: header.jsx
frontend/: index.html  register.html
frontend/static/js/: home.js  my_drives.js  passenger.js
frontend/templates/: base.html  create_route.html  my_drives.html
modules/: db.py  map.py  passwords.py
modules/database/: db.py
pages/: _app.js
static/js/: drive.js  home.js  my_drives.js  passenger.js
static/js/components/: drive_card.js
static/styles/: output.css
templates/: 404.html  base.html  create_route.html  drive.html  edit_route.html  home.html  index.html  login.html  my_drives.html  my_drives.js  nav.html  passenger.html  register.html  search.html  settings.html
templates/components/: 404_card.html  create_route_card.html  drive_card.html  edit_drive_card.html  login_card.html  my_drives_card.html  new_drive_button.html  register_card.html  settings_card.html
templates/js/: my_drives.js
